# journeyman

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  conftest.py  pyproject.toml
ci/: definition_of_done.yaml
codegraph/: README.md  graph.json
cognition/: README.md
coordination/: README.md
docs/: SPEC.md  threat-model.md
docs/adr/: 0002-validate-compounding-before-building.md  0003-single-agent-first.md  0004-vector-first-agent-memory.md  0005-coding-effector-as-tool.md  0006-two-plane-knowledge.md  0007-milestone-gated-budget.md  0008-seed-owned-dream-and-guard.md  0009-assurance-artifacts-and-security-gates.md  0010-code-security-gate.md  0011-runtime-operations-governance.md  0012-durable-memory-robustness.md  0013-craft-is-model-version-scoped.md  0014-spec-and-test-independent-verification.md  0015-total-cost-accounting-and-viability-scoping.md  0016-scalable-human-oversight.md  0017-phase-minus-1-statistical-rigor.md  0018-agent-operator-communication.md  0019-phase-minus-1-harness-architecture.md  0020-phase-minus-1-orchestrator-and-retrieval.md  0021-phase-minus-1-business-rule-compiler-and-corpus.md  0022-phase-minus-1-computed-field-dimension.md  0023-phase-minus-1-orchestrator-implementation.md
docs/knowledge/: index.md
dream/: README.md
evals/: README.md  eval-governance.md  regression-manifest.yaml
evals/redteam/: approval-bypass.jsonl  memory-poisoning.jsonl  prompt-injection.jsonl  tool-abuse.jsonl
experiments/phase_minus_1/: CHANGELOG.md  README.md  domain.md  protocol.md  results.schema.json  retrieval_gold.yaml  taskset.json  taskset.schema.json
governance/: README.md
hooks/: README.md  check_docs_sync.py  pre-commit  regenerate_code_graph.sh  run_dod.sh
kernel/: README.md
memory/: README.md  skill-manifest.schema.json
observability/: README.md  redaction-policy.md  retention-policy.md  trace-schema.json
project/: README.md
project/project-template/: CLAUDE.md  README.md
security/: approval-policy.md  approval-record.schema.json  code-security-policy.md  data-classification-policy.md  human-comms-policy.md  human-comms.schema.json  memory-admission-policy.md  runtime-ops-policy.md  tool-policy.yaml  untrusted-content-pipeline.md
tasks/: BACKLOG.md  README.md
tasks/phase_0_seed/: T0_04_coding_effector_adapter.taskspec.json  T0_wire_dod_gates.taskspec.json
tasks/phase_minus_1/: validation.taskspec.json
tests/integration/: README.md  test_boot_path.py  test_dod_gate_isolation.py  test_experiment_runner.py  test_fullrun_ops.py  test_oracle.py  test_oracle_business_rules.py  (+6 more)
tools/: README.md  coding-effector-contract.md  coding-effector-sandbox.yaml
(+96 files in other folders)
