[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "journeyman"
version = "0.0.0"
description = "Self-extending agent system"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "pyyaml>=6",
  # Seed build adds: model SDK(s), a vector/memory runtime, a sandbox, an event store.
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "black>=24",
  "build>=1",
  # Phase -1 harness (experiments/phase_minus_1/harness) test + runtime deps.
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "jsonschema>=4",
]

# The Journeyman's source lives in the component packages (the seed-vs-deferred map
# is in ARCHITECTURE.md). Claude Code finalizes packaging during the seed build.
[tool.setuptools]
packages = [
  "kernel", "memory", "governance", "dream", "cognition",
  "tools", "observability", "evals", "project",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
# .context holds gitignored per-instance run artifacts (scaffolded repos, generated
# suites); never collect tests from there.
norecursedirs = [".context", "*/repo", "*/artifacts"]
filterwarnings = [
  # third-party: starlette TestClient flags new httpx; not our code, harmless.
  "ignore::DeprecationWarning:starlette.testclient",
]

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".context"]

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "/\\.context/"
